--- a/src/main/resources/com/example/project/TransactionManagerView.fxml
+++ b/src/main/resources/com/example/project/TransactionManagerView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -14,6 +15,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project.TransactionManagerController">
 
@@ -96,7 +98,7 @@
                                          <ToggleGroup fx:id="campusGroup" />
                                      </toggleGroup>
                                     </RadioButton>
-                                    <RadioButton fx:id="newark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" >
+                                    <RadioButton fx:id="newark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                         <fx:reference source="campusGroup" />
                                     </RadioButton>
                                      <RadioButton fx:id="camden" mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2">
@@ -151,17 +153,17 @@
                                         </RadioButton>
                                         <RadioButton fx:id="closecollegeChecking" text="College Checking" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <fx:reference source="accountGroup" />
+                                                <fx:reference source="closeaccountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <RadioButton fx:id="closesavings" text="Savings" GridPane.columnIndex="3" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <fx:reference source="accountGroup" />
+                                                <fx:reference source="closeaccountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <RadioButton fx:id="closemarket" text="Money Markets" GridPane.columnIndex="4" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <fx:reference source="accountGroup" />
+                                                <fx:reference source="closeaccountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
@@ -190,16 +192,15 @@
                                                         <ToggleGroup fx:id="closecampusGroup" />
                                                     </toggleGroup>
                                                 </RadioButton>
-                                                <RadioButton fx:id="closenewark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" >
+                                                <RadioButton fx:id="closenewark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                                     <fx:reference source="closecampusGroup" />
                                                 </RadioButton>
                                                 <RadioButton fx:id="closecamden" mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                                     <fx:reference source="closecampusGroup" />
-
                                                 </RadioButton>
                                             </children>
                                         </GridPane>
-                                        <Button mnemonicParsing="false" onAction="#closeAccount" text="Open" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                        <Button mnemonicParsing="false" onAction="#closeAccount" text="Close" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                                         <CheckBox fx:id="closeloyal" mnemonicParsing="false" text="Loyal Customer" GridPane.columnIndex="4" GridPane.rowIndex="4" GridPane.valignment="TOP" />
                                     </children>
                                 </GridPane>
@@ -210,7 +211,80 @@
                 </Tab>
                 <Tab text="Deposit / Withdraw">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <children>
+                           <GridPane AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="0.0">
+                             <columnConstraints>
+                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.5" minWidth="10.0" prefWidth="138.5" />
+                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="140.5" />
+                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="10.0" prefWidth="118.5" />
+                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="143.0" />
+                             </columnConstraints>
+                             <rowConstraints>
+                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             </rowConstraints>
+                              <children>
+                                 <Label alignment="CENTER" text="First Name" />
+                                 <Label text="Last Name" GridPane.rowIndex="1" />
+                                 <Label text="Date of Birth" GridPane.rowIndex="2" />
+                                 <Label text="Account Type" GridPane.rowIndex="3" />
+                                 <TextField GridPane.columnIndex="1" />
+                                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 <RadioButton mnemonicParsing="false" fx:id = "depWithChecking" text="Checking" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                     <GridPane.margin>
+                                       <Insets />
+                                    </GridPane.margin>
+                                 </RadioButton>
+                                 <RadioButton mnemonicParsing="false" fx:id = "depWithCollegeChecking" text="College Checking" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+                                 <RadioButton mnemonicParsing="false" fx:id = "depWithSavings" text="Savings" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                                 <RadioButton mnemonicParsing="false" fx:id = "depWithMarket" text="Money Market" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                                 <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
+                                   <columnConstraints>
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="71.5" minWidth="10.0" prefWidth="59.0" />
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="93.0" />
+                                   </columnConstraints>
+                                   <rowConstraints>
+                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                   </rowConstraints>
+                                    <children>
+                                       <RadioButton mnemonicParsing="false" fx:id = "depWithNB" text="NB" GridPane.columnIndex="1">
+                                          <font>
+                                             <Font size="11.0" />
+                                          </font>
+                                       </RadioButton>
+                                       <RadioButton mnemonicParsing="false" fx:id = "depWithCamden" text="Camden" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                          <font>
+                                             <Font size="11.0" />
+                                          </font>
+                                       </RadioButton>
+                                       <RadioButton mnemonicParsing="false" fx:id = "depWithNewark" text="Newark" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                          <font>
+                                             <Font size="11.0" />
+                                          </font>
+                                       </RadioButton>
+                                       <Label text="Campus" GridPane.rowIndex="2">
+                                          <font>
+                                             <Font size="11.0" />
+                                          </font>
+                                       </Label>
+                                    </children>
+                                 </GridPane>
+                                 <Button mnemonicParsing="false" onAction= "#depositAccount" text="Deposit" GridPane.rowIndex="5" />
+                                 <Button mnemonicParsing="false" onAction= "#withdrawAccount" text="Withdraw" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              </children>
+                           </GridPane>
+                        </children></AnchorPane>
                     </content>
                 </Tab>
                 <Tab text="Account Database">
