--- a/src/main/resources/com/example/project/TransactionManagerView.fxml
+++ b/src/main/resources/com/example/project/TransactionManagerView.fxml
@@ -368,7 +368,7 @@
                                  <Button mnemonicParsing="false" onAction="#updateAccWithFees" prefHeight="25.0" prefWidth="237.0" text="Update Accounts With Interests and Fees" GridPane.columnIndex="3" GridPane.halignment="LEFT" />
                               </children>
                            </GridPane>
-                           <TextArea editable="false" fx:id = "displayField" layoutX="30.0" layoutY="74.0" prefHeight="231.0" prefWidth="631.0" wrapText="true" />
+                           <TextArea fx:id="displayField" editable="false" layoutX="30.0" layoutY="74.0" prefHeight="231.0" prefWidth="631.0" wrapText="true" />
                         </children></AnchorPane>
                     </content>
                 </Tab>
